# afx-nuke-plugins

./: .gitignore  CMakeLists.txt  README.md  menu.py
cmake/Modules/: FindHoard.cmake  FindIlmBase.cmake  FindIpp.cmake  FindJemalloc.cmake  FindNuke.cmake
include/: attribute.h  bounds.h  cmake_config.h.in  color_op.h  convolution.h  convolve.h  cuda_helper.h  gauss_blur.h  glow.h  glow_temp.h  image.h  image_tools.h  median.h  memory.h  mlaa.h  msvc_hacks.h  noise_map.h  nuke_helper.h  pixel.h  settings.h  threading.h  types.h
src/: afx_anti_alias.cpp  afx_chroma_key.cpp  afx_despill.cpp  afx_glow.cpp  afx_mc_noise_map.cpp  afx_median.cpp  afx_median.cu  afx_noise_map.cpp  afx_soft_clip.cpp  afx_tone_map.cpp  cuda_helper.cpp  gauss_blur.cpp  image.cpp  mlaa.cpp  threading.cpp
